syntax = "proto3";

package protos.logout;
option go_package = "protos";


service LogoutService {
    rpc logout (LogoutRequest) returns (LogoutResponse);
}

message LogoutRequest {
    string userId = 1;
    string sessionId = 2;
    string device = 3;//设备
}

message LogoutResponse {
    string message = 1;//状态消息
    int32 code = 2;//状态码
    int32 status = 3;// 退出状态，1成功，0失败
}
